# sioxx

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  opencode.json  package-lock.cmake
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml  release.yml
cmake/: sioxxConfig.cmake.in
examples/: basic_client.cpp  cbor_parser.hpp
examples/test_server/: README.md  cbor-parser.js  package.json  pnpm-lock.yaml  server.js
include/sioxx/: client.hpp  client_options.hpp  engineio_client.hpp  http_polling_transport.hpp  json_parser.hpp  message.hpp  msgpack_parser.hpp  packet.hpp  parser.hpp  polling_protocol.hpp  reconnection.hpp  sioxx.hpp  socket.hpp  socketio_client.hpp  socketio_socket.hpp  transport.hpp  url_parse.hpp  websocket_transport.hpp
scripts/: prepare-release.sh
src/: client.cpp  client_impl.hpp  engineio_client.cpp  engineio_client.hpp  http_polling_transport.cpp  http_polling_transport.hpp  json_parser.cpp  json_parser.hpp  msgpack_parser.cpp  msgpack_parser.hpp  reconnection.cpp  socket.cpp  socketio_client.cpp  socketio_socket.cpp  transport.hpp  url_parse.cpp  websocket_transport.cpp
tests/: CMakeLists.txt  test_custom_parser.cpp  test_engineio_client.cpp  test_json_parser.cpp  test_message.cpp  test_msgpack_parser.cpp  test_reconnection.cpp  test_socket.cpp  test_socketio_socket.cpp  test_url_parse.cpp
